# gaus-seidel-mpi

./: CMakeLists.txt  ParallelGS.cpp  SerialGS.cpp
